fix horizontal scroll

--- a/stylesheets/custom.jumbotron.scss
+++ b/stylesheets/custom.jumbotron.scss
@@ -1,6 +1,7 @@
 
 // Common
 .jumbotron-fluid {
+  overflow: hidden;
   padding: 0 1rem;
   position: relative;
 
